Metrics subsystem modernized