@@ -43,9 +43,8 @@ import java.util.stream.Collectors;
 @Slf4j
 public class MicrometerMetricsService
 {
-    private final String METRIC_CALL = Constants.SUBSYSTEM_NAME.toLowerCase() + ".call";
-    private final String METRIC_HEALTH = Constants.SUBSYSTEM_NAME.toLowerCase() + ".health";
-    private final String TOTAL_USER_COUNT_METRIC = Constants.SUBSYSTEM_NAME.toLowerCase() + ".total_user_count";
+    private static final String METRIC_CALL = Constants.SUBSYSTEM_NAME.toLowerCase() + ".call";
+    private static final String METRIC_HEALTH = Constants.SUBSYSTEM_NAME.toLowerCase() + ".health";
 
     private final List<HealthIndicator> healthIndicators;
 
@@ -58,10 +57,10 @@ public class MicrometerMetricsService
         this.metricService = new DualMetric(registry, Constants.SUBSYSTEM_NAME.toLowerCase(),"service");
 
         // Health indicators
-        this.healthIndicators = healthContributorRegistry.stream() //
-                .map(c -> this.getIndicatorFromContributor(c)) //
-                .collect(Collectors.toList());
-        Gauge.builder(METRIC_HEALTH, healthIndicators, MicrometerMetricsService::healthToCode) //
+        this.healthIndicators = healthContributorRegistry.stream()
+                .map(c -> this.getIndicatorFromContributor(c))
+                .toList();
+        Gauge.builder(METRIC_HEALTH, healthIndicators, MicrometerMetricsService::healthToCode)
                 .description("The current value of the composite health endpoint").register(registry);
     }
 
@@ -75,14 +74,13 @@ public class MicrometerMetricsService
         log.debug(String.format("Using health contributor: '%s'", namedContributor.getName()));
 
         HealthContributor contributor = namedContributor.getContributor();
-        if (contributor instanceof HealthIndicator)
+        if (contributor instanceof HealthIndicator healthIndicator)
         {
-            return (HealthIndicator) contributor;
+            return healthIndicator;
         }
 
-        if (contributor instanceof CompositeHealthContributor)
+        if (contributor instanceof CompositeHealthContributor compositeHealthContributor)
         {
-            CompositeHealthContributor compositeHealthContributor = (CompositeHealthContributor) contributor;
             for (NamedContributor<HealthContributor> elementOfComposite : compositeHealthContributor)
             {
                 return getIndicatorFromContributor(elementOfComposite); // NOSONAR
